[package]
name = "cactuserve"
version = "0.1.0-alpha.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
bytemuck = "1.18.0"
maud = { version = "0.26.0", features = ["rocket"] }
pem = "3.0.4"
tempfile = "3.12.0"
thiserror = "1.0.63"
cactuserve_sessions = { path = "../cactuserve_sessions" }
anyhow = "1.0.90"
bitflags = { version = "2.6.0", features = ["std"] }
smallvec = "1.13.2"
